spacing home for publis fixed, image for cv added

--- a/css/global.css
+++ b/css/global.css
@@ -54,3 +54,15 @@ ul {
     font-size: 1em;
     color: rgba(100, 100, 100);
 }
+
+.image_container {
+    width: 40px;
+    height: 30px;
+    object-fit: contain;
+
+}
+
+#format_home_publis {
+    text-align: left;
+    margin-top: 40px;
+}
